--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,16 @@
-numpy==1.18.4
-matplotlib==3.2.1
-scipy==1.4.1
-pygame==1.9.6
+cffi==1.15.0
+cycler==0.11.0
+fonttools==4.32.0
+kiwisolver==1.4.2
+matplotlib==3.5.1
+numpy==1.22.3
+packaging==21.3
+Pillow==9.1.0
 PyAudio==0.2.11
+pycparser==2.21
+pygame==2.1.2
+pyparsing==3.0.8
+python-dateutil==2.8.2
+scipy==1.8.0
+six==1.16.0
+sounddevice==0.4.4
